added service to send message through KStream

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 server.port=8888
 
+#channel which it is bind to
+spring.cloud.stream.bindings.input-channel-1.destination=Auth-Topic
+
 #For Consumer
 spring.kafka.consumer.group-id=mygroup
 spring.kafka.consumer.auto-offset-reset=earliest
@@ -11,7 +14,6 @@ spring.kafka.consumer.properties.spring.deserializer.value.delegate.class=org.sp
 #For Producer
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
-
 
 # Required connection configs for Kafka producer, consumer, and admin
 spring.kafka.properties.sasl.mechanism=PLAIN
