--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,7 @@ server.port=8888
 
 #channel which it is bind to
 spring.cloud.stream.bindings.input-channel-1.destination=Auth-Topic
+#spring.kafka.bootstrap-servers=localhost:9092
 
 #For Consumer
 spring.kafka.consumer.group-id=mygroup
